test/programs/invalid/modifiers/package_private_fields.java
package dovs.joos.features;

protected class A {
  /* package private */ int x;
}

